src/test/resources/testinput/parsable/symtab/invalid_coco/special4.ocl
/* (c) https://github.com/MontiCore/monticore */
ocl special4 {
  context Auction a inv:
    let
      BidMessage bm = a.person.message[2]
in
      defined(bm) implies true;
}
